--- a/Tengu/Views/DownloadControl.axaml
+++ b/Tengu/Views/DownloadControl.axaml
@@ -13,78 +13,6 @@
 	<StackPanel Margin="10">
 		<TextBlock Text="Downloads"/>
 		<Border Height="1"
-				Background="Black"/>
-
-		<StackPanel Spacing="5">
-			<StackPanel Margin="0,5,0,0">
-				<TextBlock Text="{Binding CurrentDownload}" />
-
-				<Grid ColumnDefinitions="*,Auto,Auto"
-					  RowDefinitions="*,Auto">
-					<StackPanel Orientation="Horizontal"
-								Opacity=".7"
-								Spacing="5">
-						<TextBlock Text="Ep. 1"
-								   FontSize="12"/>
-						<TextBlock Text="•"
-								   FontSize="12"/>
-						<TextBlock Text="Saturn"
-								   FontSize="12"/>
-					</StackPanel>
-
-					<TextBlock Text="10%"
-							   Grid.Column="1"
-							   VerticalAlignment="Center"/>
-
-					<ProgressBar Grid.Row="1"
-								 Value="10"
-								 Grid.ColumnSpan="2"/>
-
-					<Button Grid.Column="2"
-							Grid.Row="1"
-							Content="x"
-							Padding="0"
-							Foreground="Red"
-							Background="Transparent"
-							BorderThickness="0"
-							Margin="10,0,0,0"/>
-				</Grid>
-			</StackPanel>
-
-			<StackPanel Margin="0,0,0,0">
-				<TextBlock Text="{Binding CurrentDownload}" />
-
-				<Grid ColumnDefinitions="*,Auto,Auto"
-					  RowDefinitions="*,Auto">
-					<StackPanel Orientation="Horizontal"
-								Opacity=".7"
-								Spacing="5">
-						<TextBlock Text="Ep. 1"
-								   FontSize="12"/>
-						<TextBlock Text="•"
-								   FontSize="12"/>
-						<TextBlock Text="Unity"
-								   FontSize="12"/>
-					</StackPanel>
-
-					<TextBlock Text="10%"
-							   Grid.Column="1"
-							   VerticalAlignment="Center"/>
-
-					<ProgressBar Grid.Row="1"
-								 Value="10"
-								 Grid.ColumnSpan="2"/>
-
-					<Button Grid.Column="2"
-							Grid.Row="1"
-							Content="x"
-							Padding="0"
-							Foreground="Red"
-							Background="Transparent"
-							BorderThickness="0"
-							Margin="10,0,0,0"/>
-				</Grid>
-			</StackPanel>
-		</StackPanel>
+				Background="{DynamicResource ButtonBorderBrush}"/>
 	</StackPanel>
 </UserControl>
