--- a/Tengu/Views/MainWindow.axaml
+++ b/Tengu/Views/MainWindow.axaml
@@ -19,7 +19,7 @@
 		
 		<Grid Background="Transparent"
               Name="TitleBarHost"
-              ColumnDefinitions="Auto,*">
+              ColumnDefinitions="Auto,*, Auto">
 
 			<StackPanel Orientation="Horizontal"
 						Spacing="10"
@@ -104,34 +104,46 @@
 						</MenuItem>
 					</MenuItem>
 				</Menu>
+				
 			</StackPanel>
+
+			<ToggleButton Content="dwnlds"
+						  IsChecked="{Binding #SplitViewDownload.IsPaneOpen}"
+						Grid.Column="2"
+						Margin="10,0"/>
 		</Grid>
 
-		<Grid 
-			  Grid.Row="1">
-			<Grid.ColumnDefinitions>
-				<ColumnDefinition Width="3.5*" />
-				<ColumnDefinition Width="2" />
-				<ColumnDefinition Width="*" />
-			</Grid.ColumnDefinitions>
-			
+		<SplitView PanePlacement="Right"
+				   PaneBackground="Transparent"
+				   Name="SplitViewDownload"
+				   Grid.Row="1">
+			<SplitView.Pane>
+				<Grid RowDefinitions="10, 5*, 10"
+					  Background="Transparent">
+					<Border BorderThickness="1,1,0,1"
+							Grid.Row="1"
+							Width="300"
+							CornerRadius="5 0 0 5"
+							BorderBrush="{DynamicResource ButtonBorderBrush}">
+						<Grid RowDefinitions="*, 2, *">
+							<local:DownloadControl />
+
+							<GridSplitter Grid.Row="1"/>
+
+							
+						</Grid>
+					</Border>
+				</Grid>
+			</SplitView.Pane>
+
 			<Panel>
 				<ui:Frame Name="FrameView"/>
+				
+				<Border Background="{DynamicResource ButtonBorderBrush}"
+						IsVisible="{Binding #SplitViewDownload.IsPaneOpen}"
+						Opacity=".3"/>
 			</Panel>
-			
-			<GridSplitter Grid.Column="1" />
-
-			<Grid RowDefinitions="*, 2, *"
-				  Grid.Column="2">
-				<local:DownloadControl />
-
-				<GridSplitter Grid.Row="1"/>
-
-				<Border Background="LightGray" 
-						Grid.Row="2"/>
-
-			</Grid>
-		</Grid>
+		</SplitView>
 	</Grid>
 
 </Window>
