--- a/Tengu/App.axaml
+++ b/Tengu/App.axaml
@@ -3,6 +3,13 @@
              xmlns:local="using:Tengu"
 			 xmlns:sty="using:FluentAvalonia.Styling"
              x:Class="Tengu.App">
+	<Application.Resources>
+		<ResourceDictionary>
+			<ResourceDictionary.MergedDictionaries>
+				<ResourceInclude Source='/Resources/Icons.axaml'/>
+			</ResourceDictionary.MergedDictionaries>
+		</ResourceDictionary>
+	</Application.Resources>
 
     <Application.Styles>
 		
