--- a/Tengu/App.axaml
+++ b/Tengu/App.axaml
@@ -7,6 +7,8 @@
 		<ResourceDictionary>
 			<ResourceDictionary.MergedDictionaries>
 				<ResourceInclude Source='/Resources/Icons.axaml'/>
+
+				<ResourceInclude Source='/Resources/Itachi.axaml'/>
 			</ResourceDictionary.MergedDictionaries>
 		</ResourceDictionary>
 	</Application.Resources>
