--- a/Tengu/Views/LatestEpisodesControl.axaml
+++ b/Tengu/Views/LatestEpisodesControl.axaml
@@ -4,6 +4,7 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
 			 xmlns:ui="using:FluentAvalonia.UI.Controls"
 			 xmlns:icons="using:Material.Icons.Avalonia"
+			 xmlns:asyncImageLoader="clr-namespace:AsyncImageLoader;assembly=AsyncImageLoader.Avalonia"
 			 xmlns:vm="using:Tengu.ViewModels"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
              x:Class="Tengu.Views.LatestEpisodesControl">
@@ -15,12 +16,14 @@
 		<Style Selector="Button.EpUnity">
 			<Setter Property="Height" Value="180" />
 			<Setter Property="Width" Value="120" />
+			<Setter Property="Margin" Value="5"/>
 			<Setter Property="BorderThickness" Value="0" />
 			<Setter Property="CornerRadius" Value="0" />
 		</Style>
 		<Style Selector="Button.EpUnity:pointerover">
 			<Setter Property="Height" Value="190" />
 			<Setter Property="Width" Value="130" />
+			<Setter Property="Margin" Value="2" />
 		</Style>
 		<Style Selector="Button.Page">
 			<Setter Property="BorderThickness" Value="0" />
@@ -77,25 +80,30 @@
 
 				<Panel Grid.Row="1"
 					   Margin="0,10,0,0">
-					<ItemsControl Items="{Binding LatestEpisodesList}"
-								  Name="IcLatest">
+					<ScrollViewer>
+						<ItemsControl Items="{Binding LatestEpisodesList}"
+									  Name="IcLatest">
 
-						<ItemsControl.ItemsPanel>
-							<ItemsPanelTemplate>
-								<WrapPanel Orientation="Horizontal"/>
-							</ItemsPanelTemplate>
-						</ItemsControl.ItemsPanel>
+							<ItemsControl.ItemsPanel>
+								<ItemsPanelTemplate>
+										<WrapPanel Orientation="Horizontal"/>
+								</ItemsPanelTemplate>
+							</ItemsControl.ItemsPanel>
 
-						<ItemsControl.ItemTemplate>
-							<DataTemplate>
-								<Button Classes="EpUnity"
-										Padding="0"
-										Content="{Binding}">
-									
-								</Button>
-							</DataTemplate>
-						</ItemsControl.ItemTemplate>
-					</ItemsControl>
+							<ItemsControl.ItemTemplate>
+								<DataTemplate>
+									<Button Classes="EpUnity"
+											Padding="0">
+										<Grid>
+											<Image asyncImageLoader:ImageLoader.Source="{Binding Image}" 
+												   Stretch="UniformToFill"
+												   RenderOptions.BitmapInterpolationMode="HighQuality"/>
+										</Grid>
+									</Button>
+								</DataTemplate>
+							</ItemsControl.ItemTemplate>
+						</ItemsControl>
+					</ScrollViewer>
 
 					<StackPanel HorizontalAlignment="Center"
 								VerticalAlignment="Center"
@@ -117,6 +125,7 @@
 			</Grid>
 
 			<StackPanel Spacing="10" 
+						Margin="0,10,0,0"
 						IsEnabled="{Binding !Loading}"
 						Orientation="Horizontal"
 						Grid.Row="2">
