--- a/Tengu/Views/LatestEpisodesControl.axaml
+++ b/Tengu/Views/LatestEpisodesControl.axaml
@@ -54,7 +54,7 @@
 		</Style>
 	</UserControl.Styles>
 
-	<Grid ColumnDefinitions="1.5*,*">
+	<Grid ColumnDefinitions="2*,*">
 		<Grid ColumnDefinitions="*,*"
 			  Grid.ColumnSpan="2"
 			  RowDefinitions="*,5*">
@@ -93,6 +93,7 @@
 				  Grid.Row="1">
 
 					<ComboBox Width="200"
+							  IsEnabled="{Binding !Loading}"
 							  Items="{Binding HostsList}"
 							  SelectedItem="{Binding SelectedHost}">
 					</ComboBox>
