--- a/Tengu/Views/LatestEpisodesControl.axaml
+++ b/Tengu/Views/LatestEpisodesControl.axaml
@@ -20,15 +20,15 @@
 
 	<UserControl.Styles>
 		<Style Selector="Button.EpUnity">
-			<Setter Property="Height" Value="180" />
-			<Setter Property="Width" Value="120" />
+			<Setter Property="Height" Value="220" />
+			<Setter Property="Width" Value="160" />
 			<Setter Property="Margin" Value="5"/>
 			<Setter Property="BorderThickness" Value="0" />
 			<Setter Property="CornerRadius" Value="0" />
 		</Style>
 		<Style Selector="Button.EpUnity:pointerover">
-			<Setter Property="Height" Value="190" />
-			<Setter Property="Width" Value="130" />
+			<Setter Property="Height" Value="230" />
+			<Setter Property="Width" Value="170" />
 			<Setter Property="Margin" Value="2" />
 		</Style>
 		<Style Selector="Button.EpSaturn">
@@ -119,8 +119,32 @@
 											<Image asyncImageLoader:ImageLoader.Source="{Binding Image}" 
 												   Stretch="UniformToFill"
 												   RenderOptions.BitmapInterpolationMode="HighQuality"/>
+
+											<Border Background="{DynamicResource SolidBackgroundFillColorQuarternary}"
+													VerticalAlignment="Bottom"
+													Margin="0,0,0,10">
+												<Grid ColumnDefinitions="*,Auto">
+
+													<StackPanel Margin="5">
+														<TextBlock Text="{Binding Title}" 
+																   TextWrapping="Wrap"
+																   FontWeight="Medium"/>
+														<TextBlock Text="{Binding EpisodeNumber, StringFormat=Episode {0}}" />
+													</StackPanel>
+
+													<Button Classes="accent"
+															Grid.Column="1"
+															CornerRadius="15"
+															BorderThickness="0"
+															HorizontalAlignment="Right"
+															Margin="5">
+														<icons:MaterialIcon Kind="Download" />
+													</Button>
+												</Grid>
+											</Border>
 										</Grid>
 									</Button>
+
 								</DataTemplate>
 							</ItemsControl.ItemTemplate>
 						</ItemsControl>
